# k8sRecorder

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
docs/source/: conf.py  index.rst
k8Recorder/: query.py  script.py  utils.py
k8Recorder/operators/: __init__.py  pods.py
k8sRecorder/: __init__.py  runner.py  script.py  utils.py
k8sRecorder/_types/: __init__.py  actions.py  pods.py
k8sRecorder/k8s/: __init__.py  pods.py
k8sRecorder/operators/: record.py  replay.py
k8stracker/: _types.py  script.py
k8stracker/operators/: pods.py
output/: alertmanager-kube-stack-prometheus-kube-alertmanager-0.csv  coredns-787d4945fb-x7lgx.csv  dcgm-exporter-1687520926-2kv8t.csv  etcd-minikube.csv  kube-apiserver-minikube.csv  kube-controller-manager-minikube.csv  kube-proxy-k4st7.csv  kube-scheduler-minikube.csv  kube-stack-prometheus-grafana-7c98fbc9c5-mjsvx.csv  kube-stack-prometheus-kube-operator-6c69f549cb-tfxmg.csv  kube-stack-prometheus-kube-state-metrics-6845997448-hcjv6.csv  kube-stack-prometheus-prometheus-node-exporter-gdv5p.csv  my-pod.csv  nginx-pod.csv  prometheus-kube-stack-prometheus-kube-prometheus-0.csv  storage-provisioner.csv
