[tool.poetry]
name = "k8stracker"
version = "0.1.0"
description = ""
authors = ["dev0Guy <97923827+dev0Guy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
prometheus-api-client = "^0.5.3"
kopf = "^1.36.1"
kubernetes = "^26.1.0"
black = "^23.3.0"
click = "^8.1.3"
scipy = "^1.11.1"

[tool.poetry.scripts]
operators = "k8stracker.script:run_operators"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
