[tool.poetry]
name = "k8sRecorder"
version = "0.1.0"
description = ""
authors = ["dev0Guy <97923827+dev0Guy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
prometheus-api-client = "^0.5.3"
kopf = "^1.36.1"
kubernetes = "^26.1.0"
click = "^8.1.3"
scipy = "^1.11.1"
uvloop = "^0.17.0"
fitter = "^1.5.2"

[tool.poetry.scripts]
operators = "k8sRecorder.script:run_operators"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyre-check = "^0.9.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
